--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -8,9 +8,10 @@
     justify-content: space-between;
 
     .item {
-        display: flex;
-        justify-content: center;
-        font-size: 18px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 18px;
     }
 
     .left {
@@ -18,13 +19,40 @@
       align-items: center;
       gap: 25px;
     }
-    .center{
-        font-size: 30px;
+    .center {
+      font-size: 30px;
     }
 
     .right {
       display: flex;
       align-items: center;
+      gap: 18px;
+      .icons {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        color: #777;
+        cursor: pointer;
+
+        .cartIcon {
+          position: relative;
+
+          span {
+            font-size: 12px;
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            background-color: #2879fe;
+            color: white;
+            position: absolute;
+            top: -10px;
+            right: -10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          }
+        }
+      }
     }
   }
 }
