--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -12,12 +12,18 @@
       justify-content: center;
       align-items: center;
       font-size: 18px;
+      transition: ease-in-out .2s;
+
+      &:hover {     
+        color: #2879fe;;
+      }
     }
 
     .left {
       display: flex;
       align-items: center;
       gap: 25px;
+      cursor: pointer;
     }
     .center {
       font-size: 30px;
