--- a/client/src/components/Slider/Slider.scss
+++ b/client/src/components/Slider/Slider.scss
@@ -1,7 +1,8 @@
 .slider {
   height: calc(100vh - 80px);
-  width: 100vw;
+  // width: 100vw;
   position: relative;
+  overflow: hidden;
 
   .container {
     width: 300vw;
