--- a/client/src/pages/Product/Product.scss
+++ b/client/src/pages/Product/Product.scss
@@ -2,6 +2,7 @@
   padding: 20px 50px;
   display: flex;
   gap: 50px;
+  margin-top: 3rem;
 
   .left {
     flex: 1;
@@ -22,6 +23,7 @@
 
     .mainImage {
       flex: 5;
+      transition: all 0.8s ease;
 
       img {
         width: 100%;
@@ -33,5 +35,71 @@
 
   .right {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+
+    .price {
+      font-size: 30px;
+      color: #2879fe;
+      font-weight: 500;
+    }
+
+    p {
+      font-size: 18px;
+      font-weight: 300;
+      text-align: justify;
+    }
+
+    .quantity {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+
+      button {
+        width: 30px;
+        height: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        border: none;
+      }
+    }
+
+    .add {
+      width: 230px;
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      background-color: #2879fe;
+      border: none;
+      color: white;
+      gap: 20px;
+    }
+    .links {
+      display: flex;
+      gap: 20px;
+
+      .item {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        color: #2879fe;
+        cursor: pointer;
+        font-size: 14px;
+      }
+    }
+
+    .info {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      color: gray;
+      font-size: 14px;
+      margin-top: 30px;
+    }
   }
 }
